# ConstellaDB

./: .env  .gitignore  Cargo.toml  README.md  packager.py  test_generator.py
.cargo/: config.toml
src/: main.rs
src/gateway/: Cargo.toml
src/gateway/src/: main.rs
src/modules/: mod.rs
src/modules/cmd/: ast.rs  error.rs  executor.rs  mod.rs  parser.rs
src/modules/cmd_module/: Cargo.toml
src/modules/cmd_module/src/: ast.rs  error.rs  executor.rs  lib.rs  parser.rs
src/modules/cmd_module/tests/: integration_tests.rs
src/modules/db/: ddl.rs  dml.rs  engine.rs  mod.rs  types.rs
src/modules/db_module/: Cargo.toml
src/modules/db_module/src/: core.rs  ddl.rs  dml.rs  engine.rs  lib.rs  types.rs
src/modules/db_module/tests/: integration_tests.rs
src/modules/job_scheduler/: Cargo.toml
src/modules/job_scheduler/src/: main.rs
src/modules/network_module/: Cargo.toml
src/modules/network_module/src/: client.rs  codec.rs  lib.rs  listener.rs  message.rs
src/modules/protocol/: handler.rs  message.rs  mod.rs  serializer.rs
src/modules/protocol_module/: Cargo.toml
src/modules/protocol_module/src/: handler.rs  lib.rs  message.rs  serializer.rs
src/modules/server_module/: Cargo.toml
src/modules/server_module/src/: client.rs  codec.rs  db.rs  lib.rs  server.rs
src/node/: Cargo.toml
src/node/services/db_service/: Cargo.toml
src/node/services/db_service/src/: main.rs
src/node/services/job_service/: Cargo.toml
src/node/services/job_service/src/: job.rs  main.rs  state.rs
src/node/services/query_service/: Cargo.toml
src/node/services/query_service/src/: handlers.rs  state.rs
src/node/src/: instruction.rs  leader.rs  listener.rs  main.rs  node.rs  save.rs
src/services/db_service/: Cargo.toml
src/services/db_service/DB/: schemas.json
src/services/db_service/src/: lib.rs  main.rs
src/services/job_service/: Cargo.toml
src/services/job_service/src/: job.rs  listener.rs  main.rs  state.rs
src/services/query_service/: Cargo.toml
src/services/query_service/src/: handlers.rs  main.rs  state.rs
test_env/: gen.py
test_env/node2/: .gitignore
