[workspace]
members = [
  "src/modules/cmd_module",
  "src/modules/db_module", "src/modules/job_scheduler",
  "src/modules/network_module",
  "src/modules/protocol_module",
  "src/modules/server_module",
  "src/modules/job_scheduler",
  "src/services/job_service",
  "src/services/db_service",
  "src/services/query_service",
  "src/node",
]

[package]
name = "ConstellaDB"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
protocol_module = { path = "src/modules/protocol_module" }
cmd_module = { path = "src/modules/cmd_module" }
db_module = { path = "src/modules/db_module" }
network_module = { path = "src/modules/network_module" }
server_module = { path = "src/modules/server_module" }

tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.3", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
bincode = "1"
axum = "0.8.9"
sqlparser = "0.45"
thiserror = "1"
reqwest = { version = "0.13.4", features = ["json"] }
