[workspace]
members = [
  ".",
  "src/node/services/job_service",
  "src/node/services/db_service",
  "src/node/services/query_service",
  "src/node",
  "src/gateway",
]

[package]
name = "constella_db"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
constella_db = { path = "." }

tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.3", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
bincode = "1"
axum = "0.8.9"
sqlparser = "0.45"
thiserror = "1"
reqwest = { version = "0.13.4", features = ["json"] }
rand = "0.10.2"

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sqlparser.workspace = true
thiserror.workspace = true
clap.workspace = true
rand.workspace = true
