[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol_module.workspace = true
cmd_module.workspace = true
db_module.workspace = true

clap.workspace = true
uuid.workspace = true
bincode.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
