[package]
name = "query_service"
version = "0.1.0"
edition = "2024"

[dependencies]
cmd_module = { path = "../../modules/cmd_module" }
db_module  = { path = "../../modules/db_module" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
