[package]
name = "query_service"
version = "0.1.0"
edition = "2024"

[dependencies]
cmd_module.workspace = true
db_module.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
